--- a/Assignment/CSS-FrameWork/POS/customer.html
+++ b/Assignment/CSS-FrameWork/POS/customer.html
@@ -67,17 +67,16 @@
             </div>
 
             <div class="row justify-content-around" style="height: max-content; padding-top: 40px;">
-                <div style="background-color: #ffe5f2; height: 150px; width: 650px;">
-                    <h4 class="text-center text-light" style="background-color: #a70053; height: fit-content;">Search
-                        Customer</h4>
+                <div class="col-10 col-md-5 col-lg-5 p-0" style="background-color: #ffe5f2;">
+                    <h4 class="text-center p-2 text-light" style="background-color: #a70053;">Search Customer</h4>
                     <form>
                         <div class="mb-3 ms-3 me-3">
                             <input class="form-control" id="custId" placeholder="Input Customer ID" type="text">
                         </div>
-                        <button class="btn btn-primary" type="submit">Search</button>
-                        <button class="btn btn-danger" type="button">Delete</button>
-                        <button class="btn btn-warning" type="reset">Clear</button>
-
+                        <button class="btn btn-primary ms-3 mb-3 ms-md-3 ms-lg-3" type="submit">Search</button>
+                        <button class="btn btn-danger ms-3 mb-3 ms-md-3 ms-lg-3" type="button">Delete</button>
+                        <button class="btn btn-warning ms-3 mb-3 ms-md-3 ms-lg-3" type="reset">Clear</button>
+    
                     </form>
                 </div>
 
@@ -152,15 +151,15 @@
                             <tbody id="customerTable" style="background-color: #ffc7e3;">
                                 <tr>
                                     <td>C001</td>
-                                    <td>Dineth</td>
-                                    <td>Hikkaduwa</td>
+                                    <td>Savii</td>
+                                    <td>Matara</td>
                                     <td>100000</td>
                                 </tr>
 
                                 <tr>
                                     <td>C002</td>
-                                    <td>Savii</td>
-                                    <td>Matara</td>
+                                    <td>Dineth</td>
+                                    <td>Hikkaduwa</td>
                                     <td>100000</td>
                                 </tr>
 
