pos order form added, pos system completed

--- a/Assignment/CSS-FrameWork/POS/item.html
+++ b/Assignment/CSS-FrameWork/POS/item.html
@@ -105,16 +105,16 @@
                                             <input type="text" class="form-control" id="exampleInputID">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="itemName" class="form-label">Item name</label>
+                                            <label for="itemName" class="form-label">Item name:</label>
                                             <input type="text" class="form-control" id="exampleInputName:">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="itemPrice" class="form-label">Item Price</label>
-                                            <input type="int" class="form-control" id="exampleInputAddress:">
+                                            <label for="itemPrice" class="form-label">Item Price:</label>
+                                            <input type="number" class="form-control" id="exampleInputAddress:">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="itemQuantity" class="form-label">Item Quantity</label>
-                                            <input type="int" class="form-control" id="exampleInputSalary:">
+                                            <label for="itemQuantity" class="form-label">Item Quantity:</label>
+                                            <input type="number" class="form-control" id="exampleInputSalary:">
                                         </div>
                                     </form>
                                 </div>
@@ -129,7 +129,6 @@
                     </div>
     
                     <button type="button" class="btn btn-warning">Load All Item</button>
-                    <button type="button" class="btn btn-success">Update Item</button>
     
                 </div>
             </div>
