--- a/Assignment/CSS-FrameWork/POS/customer.html
+++ b/Assignment/CSS-FrameWork/POS/customer.html
@@ -105,16 +105,16 @@
                                             <input type="text" class="form-control" id="exampleInputID">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="customerName" class="form-label">Customer Name</label>
+                                            <label for="customerName" class="form-label">Customer Name:</label>
                                             <input type="text" class="form-control" id="exampleInputName:">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="customerAddress" class="form-label">Customer Address</label>
+                                            <label for="customerAddress" class="form-label">Customer Address:</label>
                                             <input type="text" class="form-control" id="exampleInputAddress:">
                                         </div>
                                         <div class="mb-3">
-                                            <label for="customerSalary" class="form-label">Customer Salary</label>
-                                            <input type="int" class="form-control" id="exampleInputSalary:">
+                                            <label for="customerSalary" class="form-label">Customer Salary:</label>
+                                            <input type="number" class="form-control" id="exampleInputSalary:">
                                         </div>
                                     </form>
                                 </div>
@@ -129,7 +129,6 @@
                     </div>
 
                     <button type="button" class="btn btn-warning">Load All Customer</button>
-                    <button type="button" class="btn btn-success">Update Customer</button>
 
                 </div>
             </div>
