--- a/Assignment/CSS-FrameWork/POS/order.html
+++ b/Assignment/CSS-FrameWork/POS/order.html
@@ -65,6 +65,150 @@
                     <h5 class="card-title">Order</h5>
                 </div>
             </div>
+
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col col-1" style="background-color: #ffc7e3;">
+
+                        <h4 class="text-center p-2 text-light" style="background-color: #a70053;">
+                            Invoice Details</h4>
+
+                        <div class="container text-center">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="orderID" class="form-label">Order ID:</label>
+                                    <input type="text" class="form-control" id="exampleInputOrderID">
+                                </div>
+                                <div class="col">
+                                    <label for="date" class="form-label">Date:</label>
+                                    <input type="date" class="form-control" id="exampleInputdate">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <label for="customerID" class="form-label">Customer ID:</label>
+                                    <input type="text" class="form-control" id="exampleInputCustomerID">
+                                </div>
+                                <div class="col">
+                                    <label for="name" class="form-label">Customer Name:</label>
+                                    <input type="text" class="form-control" id="exampleInputCustomerName">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col">
+                                    <label for="salary" class="form-label">Salary:</label>
+                                    <input type="number" class="form-control" id="exampleInputSalary">
+                                </div>
+                                <div class="col">
+                                    <label for="address" class="form-label">Address:</label>
+                                    <input type="text" class="form-control" id="exampleInputAddress">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col col-2" style="background-color: #ffe6f3;">
+
+                        <h4 class="text-center p-2 text-light" style="background-color: #a70053;">Item Select</h4>
+                        <div class="container text-center">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="item" class="form-label">Item:</label>
+                                    <input type="text" class="form-control" id="exampleInputitem">
+                                </div>
+                                <div class="col">
+                                    <label for="itemCode" class="form-label">Item Code:</label>
+                                    <input type="text" class="form-control" id="exampleInputitemCode">
+                                </div>
+                            </div>
+
+                            <div class="container text-center">
+                                <div class="row">
+                                    <div class="col">
+                                        <label for="itemName" class="form-label">IName:</label>
+                                        <input type="text" class="form-control" id="exampleInputitemName">
+                                    </div>
+                                    <div class="col-md-auto">
+                                        <label for="Price" class="form-label">Price:</label>
+                                        <input type="number" class="form-control" id="exampleInputitemPrice">
+                                    </div>
+                                    <div class="col col-lg-2">
+                                        <label for="qtyonh" class="form-label">QTYOnH:</label>
+                                        <input type="number" class="form-control" id="exampleInputitemQTY">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <label for="orderqty" class="form-label">Order Quantity:</label>
+                            <input type="number" class="form-control" id="exampleInpunumber">
+
+                            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                <button class="btn btn-danger" type="button">Add Item</button>
+                              </div>
+
+                        </div>
+                    </div>
+                    <div class="col" style="background-color: #ffc7e3;">
+
+                        <h4 class="text-center" style="font-size: 20px;">Total : 20000RS/=</h4>
+                        <h4 class="text-center" style="font-size: 20px; color: #d3498e;">Sub Total : 19500RS/=</h4>
+                        <div class="container text-center">
+                            <div class="row">
+                                <div class="col">
+                                    <label for="item" class="form-label">Cash:</label>
+                                    <input type="text" class="form-control" id="exampleInputitem">
+                                </div>
+                                <div class="col">
+                                    <label for="itemCode" class="form-label">Discount:</label>
+                                    <input type="text" class="form-control" id="exampleInputitemCode">
+                                </div>
+                            </div>
+                            <label for="itemName" class="form-label">Balance:</label>
+                            <input type="text" class="form-control" id="exampleInputitemName">
+
+                            <div class="d-grid gap-2 col-4 mx-auto">
+                                <button class="btn btn-success" type="button">Button</button>
+                              </div>
+
+                        </div>
+                    </div>
+
+
+
+                    <div class="row mt-1 mt-md-2 mt-lg-5 justify-content-around">
+                        <div class="col-10">
+
+                            <div class="customeTableDiv">
+                                <table class="table bg-light table-bordered w-100 h-100 table-hover">
+                                    <thead class="text-light text-center"
+                                        style="background-color: #a70053; height: fit-content;">
+                                        <tr>
+                                            <th>Item Code</th>
+                                            <th>Item Name</th>
+                                            <th>Price</th>
+                                            <th>Quantity</th>
+                                            <th>Total</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="customerTable" style="background-color: #ffc7e3;">
+                                        <tr>
+                                            <td>IC001</td>
+                                            <td>Roses</td>
+                                            <td>500</td>
+                                            <td>40</td>
+                                            <td>20000</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
     </section>
