pos system added to the portfolio

--- a/index.html
+++ b/index.html
@@ -426,6 +426,54 @@
                     </div>
                 </div>
 
+                <div class="assignment__item">
+                    <a href="Assignment/CSS-FrameWork/POS/index.html">
+                        <img src="assest/images/as5fr1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">CSS-FrameWorks</p>
+                        <a href="Assignment/CSS-FrameWork/POS/index.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="">
+                        <img src="assest/images/sampleproject.png" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">CSS-FrameWorks</p>
+                        <a href="">
+                            <h3 class="assignment__title">Assignment 02</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="">
+                        <img src="assest/images/sampleproject.png" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">CSS-FrameWorks</p>
+                        <a href="">
+                            <h3 class="assignment__title">Assignment 03</h3>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="assignment__item">
+                    <a href="">
+                        <img src="assest/images/sampleproject.png" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">CSS-FrameWorks</p>
+                        <a href="">
+                            <h3 class="assignment__title">Assignment 04</h3>
+                        </a>
+                    </div>
+                </div>
+
             </div>
         </section>
 
