--- a/Assignment/CSS-FrameWork/POS/order.html
+++ b/Assignment/CSS-FrameWork/POS/order.html
@@ -87,11 +87,11 @@
 
                             <div class="row">
                                 <div class="col">
-                                    <label for="customerID" class="form-label">Customer ID:</label>
+                                    <label for="customerID" class="form-label">C-ID:</label>
                                     <input type="text" class="form-control" id="exampleInputCustomerID">
                                 </div>
                                 <div class="col">
-                                    <label for="name" class="form-label">Customer Name:</label>
+                                    <label for="name" class="form-label">C-Name:</label>
                                     <input type="text" class="form-control" id="exampleInputCustomerName">
                                 </div>
                             </div>
