pos system ui and file names are updated

--- a/Assignment/JS/SPA-POS/item.html
+++ b/Assignment/JS/SPA-POS/item.html
@@ -20,11 +20,11 @@
 
     <section id="item">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow custom-navbar bg-body-tertiary">
-            <div class="container-fluid" style="background-color: #ffc7e3; height: 80px;">
+            <div class="container-fluid" style="background-color: #ffffff; height: 50px;">
                 <img src="assest/icon1.png" alt="Flower Store" class="img-responsive custom-logo"
-                    style="height: 70px; width: 70px; border: 2px solid rgb(182, 182, 182); border-radius: 50%; margin: 10px;">
+                    style="height: 50px; width: 50px; border: 2px solid rgb(226, 226, 226); border-radius: 50%; margin: 10px;">
                 <a class="navbar-brand"
-                    style="color: #d3498e; font-weight: 800; font-size: 35px; font-family: 'Playfair Display', serif;"
+                    style="color: #ff80c0; font-weight: 600; font-size: 30px; font-family: 'Playfair Display', serif;"
                     href="#">Flower Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="background-color: #ffc7e3; margin: 30px;">
+                    style="background-color: #ffffff; margin: 30px;">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin: 20px;">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -50,11 +50,12 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button type="button" class="btn btn-outline-light"
-                            style="background-color: #e9529e;">Search</button>
+                            style="background-color: #ff90c7;">Search</button>
                     </form>
                 </div>
             </div>
         </nav>
+
 
 
         <!-- ====================  ITEM  ============================== -->
@@ -67,8 +68,8 @@
             </div>
 
             <div class="row justify-content-around" style="height: max-content; padding-top: 40px;">
-                <div class="col-10 col-md-5 col-lg-5 p-0" style="background-color: #ffe5f2;">
-                    <h4 class="text-center p-2 text-light" style="background-color: #a70053;">Search Item</h4>
+                <div class="col-10 col-md-5 col-lg-5 p-0" style="background-color: #f0f0f0;">
+                    <h4 class="text-center p-2 text-light" style="background-color: #fd9acb;">Search Item</h4>
                     <form>
                         <div class="mb-3 ms-3 me-3">
                             <input class="form-control" id="itenid" placeholder="Input Item ID" type="text">
@@ -91,8 +92,8 @@
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
                         aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content" style="background-color: #ffe1f0;">
-                                <div class="modal-header" style="background-color: #a70053;">
+                            <div class="modal-content" style="background-color: #f0f0f0;">
+                                <div class="modal-header" style="background-color: #ffb6da;">
                                     <h1 class="modal-title fs-5" id="exampleModalLabel">Add New
                                         Item</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
@@ -136,15 +137,15 @@
                     <div class="customeTableDiv">
                         <table class="table bg-light table-bordered w-100 h-100 table-hover">
                             <thead class="text-light text-center"
-                                style="background-color: #a70053; height: fit-content;">
-                                <tr>
+                                style="background-color: #ffb6da; height: fit-content;">
+                                <tr style="color: #00000091;">
                                     <th>ID</th>
                                     <th>Name</th>
                                     <th>Price</th>
                                     <th>Quantity</th>
                                 </tr>
                             </thead>
-                            <tbody id="customerTable" style="background-color: #ffc7e3;">
+                            <tbody id="customerTable" style="background-color: #f0f0f0;">
                                 <tr>
                                     <td>I001</td>
                                     <td>Roses</td>
