--- a/Assignment/JS/SPA-POS/index.html
+++ b/Assignment/JS/SPA-POS/index.html
@@ -25,11 +25,11 @@
     <section class="Home" id="Home">
 
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow custom-navbar bg-body-tertiary">
-            <div class="container-fluid" style="background-color: #ffc7e3; height: 80px;">
+            <div class="container-fluid" style="background-color: #ffffff; height: 50px;">
                 <img src="assest/icon1.png" alt="Flower Store" class="img-responsive custom-logo"
-                    style="height: 70px; width: 70px; border: 2px solid rgb(182, 182, 182); border-radius: 50%; margin: 10px;">
+                    style="height: 50px; width: 50px; border: 2px solid rgb(226, 226, 226); border-radius: 50%; margin: 10px;">
                 <a class="navbar-brand"
-                    style="color: #d3498e; font-weight: 800; font-size: 35px; font-family: 'Playfair Display', serif;"
+                    style="color: #ff80c0; font-weight: 600; font-size: 30px; font-family: 'Playfair Display', serif;"
                     href="#">Flower Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -37,7 +37,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="background-color: #ffc7e3; margin: 30px;">
+                    style="background-color: #ffffff; margin: 30px;">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin: 20px;">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
@@ -55,7 +55,7 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button type="button" class="btn btn-outline-light"
-                            style="background-color: #e9529e;">Search</button>
+                            style="background-color: #ff90c7;">Search</button>
                     </form>
                 </div>
             </div>
@@ -67,7 +67,7 @@
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assest/home.jpeg" class="d-block w-100" alt="...">
+                    <img src="assest/home.jpeg" class="d-block w-100" alt="..." style="opacity: 0.9;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>For Your Flower Needs</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assest/home1.jpeg" class="d-block w-100" alt="...">
+                    <img src="assest/home1.jpeg" class="d-block w-100" alt="..." style="opacity: 0.9;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>For Your Flower Needs</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -85,7 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assest/home2.jpeg" class="d-block w-100" alt="...">
+                    <img src="assest/home2.jpeg" class="d-block w-100" alt="..." style="opacity: 0.9;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>For Your Flower Needs</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assest/home3.png" class="d-block w-100" alt="...">
+                    <img src="assest/home3.png" class="d-block w-100" alt="..." style="opacity: 0.9;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>For Your Flower Needs</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -103,7 +103,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assest/home4.png" class="d-block w-100" alt="...">
+                    <img src="assest/home4.png" class="d-block w-100" alt="..." style="opacity: 0.9;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>For Your Flower Needs</h5>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
