--- a/Assignment/JS/SPA-POS/order.html
+++ b/Assignment/JS/SPA-POS/order.html
@@ -20,11 +20,11 @@
 
     <section id="order">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow custom-navbar bg-body-tertiary">
-            <div class="container-fluid" style="background-color: #ffc7e3; height: 80px;">
+            <div class="container-fluid" style="background-color: #ffffff; height: 50px;">
                 <img src="assest/icon1.png" alt="Flower Store" class="img-responsive custom-logo"
-                    style="height: 70px; width: 70px; border: 2px solid rgb(182, 182, 182); border-radius: 50%; margin: 10px;">
+                    style="height: 50px; width: 50px; border: 2px solid rgb(226, 226, 226); border-radius: 50%; margin: 10px;">
                 <a class="navbar-brand"
-                    style="color: #d3498e; font-weight: 800; font-size: 35px; font-family: 'Playfair Display', serif;"
+                    style="color: #ff80c0; font-weight: 600; font-size: 30px; font-family: 'Playfair Display', serif;"
                     href="#">Flower Store</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"
-                    style="background-color: #ffc7e3; margin: 30px;">
+                    style="background-color: #ffffff; margin: 30px;">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin: 20px;">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
@@ -50,11 +50,12 @@
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button type="button" class="btn btn-outline-light"
-                            style="background-color: #e9529e;">Search</button>
+                            style="background-color: #ff90c7;">Search</button>
                     </form>
                 </div>
             </div>
         </nav>
+
 
 
         <!-- ====================  ORDER  ============================== -->
@@ -68,9 +69,9 @@
 
             <div class="container text-center">
                 <div class="row">
-                    <div class="col col-1" style="background-color: #ffc7e3;">
+                    <div class="col col-1" style="background-color: #f0f0f0;">
 
-                        <h4 class="text-center p-2 text-light" style="background-color: #a70053;">
+                        <h4 class="text-center p-2 text-light" style="background-color: #fd9acb;">
                             Invoice Details</h4>
 
                         <div class="container text-center">
@@ -109,9 +110,9 @@
                         </div>
 
                     </div>
-                    <div class="col col-2" style="background-color: #ffe6f3;">
+                    <div class="col col-2" style="background-color: #f0f0f0;">
 
-                        <h4 class="text-center p-2 text-light" style="background-color: #a70053;">Item Select</h4>
+                        <h4 class="text-center p-2 text-light" style="background-color: #fd9acb;">Item Select</h4>
                         <div class="container text-center">
                             <div class="row">
                                 <div class="col">
@@ -150,7 +151,7 @@
 
                         </div>
                     </div>
-                    <div class="col" style="background-color: #ffc7e3;">
+                    <div class="col" style="background-color: #fddeed">
 
                         <h4 class="text-center" style="font-size: 20px;">Total : 20000RS/=</h4>
                         <h4 class="text-center" style="font-size: 20px; color: #d3498e;">Sub Total : 19500RS/=</h4>
@@ -183,8 +184,8 @@
                             <div class="customeTableDiv">
                                 <table class="table bg-light table-bordered w-100 h-100 table-hover">
                                     <thead class="text-light text-center"
-                                        style="background-color: #a70053; height: fit-content;">
-                                        <tr>
+                                        style="background-color: #ffb6da; height: fit-content;">
+                                        <tr style="color: #00000091;">
                                             <th>Item Code</th>
                                             <th>Item Name</th>
                                             <th>Price</th>
@@ -192,7 +193,7 @@
                                             <th>Total</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="customerTable" style="background-color: #ffc7e3;">
+                                    <tbody id="customerTable" style="background-color: #f0f0f0;">
                                         <tr>
                                             <td>IC001</td>
                                             <td>Roses</td>
