portfolio assignment form completed

--- a/index.html
+++ b/index.html
@@ -437,6 +437,18 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="assignment__item">
+                    <a href="Assignment/CSS-FrameWork/POS/index.html">
+                        <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
+                    </a>
+                    <div class="assignment__data">
+                        <p class="assinment__subtitle">JavaScript</p>
+                        <a href="Assignment/JS/SPA/index.html">
+                            <h3 class="assignment__title">Assignment 01</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
         </section>
 
