assignment form updated

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 </div>
 
                 <div class="assignment__item">
-                    <a href="Assignment/CSS-FrameWork/POS/index.html">
+                    <a href="Assignment/JS/SPA/index.html">
                         <img src="assest/images/as6js1.PNG" alt="" class="assignment__img">
                     </a>
                     <div class="assignment__data">
